--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,7 @@
+body {
+  max-width: 1240px;
+  margin: 0 auto; }
+
 h1 {
   font-size: 40px;
   color: red; }
@@ -17,3 +21,26 @@ h2 {
   flex-wrap: wrap; }
   .hobby-container .hobby-block {
     width: 30%; }
+
+.traits-container {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0; }
+  .traits-container .single-trait {
+    padding: 5px;
+    border: 1px solid black;
+    width: 24%; }
+    .traits-container .single-trait li {
+      font-size: 20px;
+      font-weight: 500; }
+
+.header-container {
+  display: flex; }
+  .header-container h1 {
+    width: 50%; }
+  .header-container .image-container {
+    width: 10%; }
+    .header-container .image-container img {
+      width: 100%;
+      height: 100%; }
