--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,10 @@
 $font: 40px;
 
+body {
+  max-width: 1240px;
+  margin: 0 auto;
+}
+
 h1 {
   font-size: $font;
   color: red;
@@ -23,5 +28,36 @@ h2 {
   flex-wrap: wrap;
   .hobby-block {
     width: 30%;
+  }
+}
+
+.traits-container {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  .single-trait {
+    padding: 5px;
+    border: 1px solid black;
+    width: 24%;
+
+    li {
+      font-size: 20px;
+      font-weight: 500;
+    }
+  }
+}
+
+.header-container {
+  display: flex;
+  h1 {
+    width: 50%;
+  }
+  .image-container {
+    width: 10%;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
