--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,46 +1,61 @@
 body {
   max-width: 1240px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  display: flex; }
 
 h1 {
-  font-size: 40px;
-  color: red; }
+  font-size: 30px;
+  color: goldenrod; }
 
 h2 {
-  font-size: 40px;
-  color: green; }
+  font-size: 30px;
+  color: goldenrod; }
 
-.technical-skills {
-  display: flex;
-  flex-wrap: wrap; }
-  .technical-skills li {
-    width: 33%; }
+main {
+  width: 70%; }
+  main .technical-skills {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    justify-content: space-between;
+    list-style: none; }
+    main .technical-skills li {
+      width: 33%; }
+  main .hobby-container {
+    display: flex;
+    flex-wrap: wrap; }
+    main .hobby-container .hobby-block {
+      width: 30%; }
+  main .traits-container {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0; }
+    main .traits-container .single-trait {
+      padding: 5px;
+      border: 1px solid black;
+      width: 23%; }
+      main .traits-container .single-trait li {
+        font-size: 20px;
+        font-weight: 500; }
 
-.hobby-container {
-  display: flex;
-  flex-wrap: wrap; }
-  .hobby-container .hobby-block {
-    width: 30%; }
-
-.traits-container {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0; }
-  .traits-container .single-trait {
-    padding: 5px;
-    border: 1px solid black;
-    width: 24%; }
-    .traits-container .single-trait li {
-      font-size: 20px;
-      font-weight: 500; }
-
-.header-container {
-  display: flex; }
-  .header-container h1 {
-    width: 50%; }
-  .header-container .image-container {
-    width: 10%; }
-    .header-container .image-container img {
+.sidebar-container {
+  border-right: 1px solid black;
+  width: 30%;
+  margin-right: 10px;
+  position: relative; }
+  .sidebar-container nav {
+    z-index: 5; }
+    .sidebar-container nav ul {
+      list-style: none; }
+  .sidebar-container h1 {
+    width: 90%;
+    z-index: 2; }
+  .sidebar-container .image-container {
+    width: 90%;
+    position: absolute;
+    top: 40px;
+    z-index: -1; }
+    .sidebar-container .image-container img {
       width: 100%;
       height: 100%; }
