--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,63 +1,89 @@
-$font: 40px;
+$font: 30px;
 
 body {
   max-width: 1240px;
   margin: 0 auto;
+  display: flex;
 }
 
 h1 {
   font-size: $font;
-  color: red;
+  color: goldenrod;
 }
 
 h2 {
   font-size: $font;
-  color: green;
+  color: goldenrod;
 }
 
-.technical-skills {
-  display: flex;
-  flex-wrap: wrap;
-  li {
-    width: 33%;
-  }
-}
+main {
+  width: 70%;
 
-.hobby-container {
-  display: flex;
-  flex-wrap: wrap;
-  .hobby-block {
-    width: 30%;
-  }
-}
-
-.traits-container {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0;
-  .single-trait {
-    padding: 5px;
-    border: 1px solid black;
-    width: 24%;
-
+  //homepage
+  .technical-skills {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    justify-content: space-between;
+    list-style: none;
     li {
-      font-size: 20px;
-      font-weight: 500;
+      width: 33%;
     }
   }
+
+  .hobby-container {
+    display: flex;
+    flex-wrap: wrap;
+    .hobby-block {
+      width: 30%;
+    }
+  }
+
+  .traits-container {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    .single-trait {
+      padding: 5px;
+      border: 1px solid black;
+      width: 23%;
+
+      li {
+        font-size: 20px;
+        font-weight: 500;
+      }
+    }
+  }
+
+  //end of homepage
 }
 
-.header-container {
-  display: flex;
+//sidebar on all pages
+.sidebar-container {
+  border-right: 1px solid black;
+  width: 30%;
+  margin-right: 10px;
+  position: relative;
+  nav {
+    z-index: 5;
+    ul {
+      list-style: none;
+    }
+  }
   h1 {
-    width: 50%;
+    width: 90%;
+    z-index: 2;
   }
   .image-container {
-    width: 10%;
+    width: 90%;
+    position: absolute;
+    top: 40px;
+    z-index: -1;
     img {
       width: 100%;
       height: 100%;
     }
   }
 }
+//end of sidebar on all pages
